vaultwarden/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vaultwarden
  namespace: vault
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vaultwarden
  template:
    metadata:
      labels:
        app: vaultwarden
    spec:
      securityContext:
        runAsUser: 3001
        runAsGroup: 3001
        fsGroup: 3001
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: vaultwarden-vol
          persistentVolumeClaim:
            claimName: vaultwarden
      containers:
      - name: vaultwarden
        image: vaultwarden/server:1.37.4
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
        resources:
          requests:
            cpu: 15m
            memory: 110M
          limits:
            cpu: 100m
            memory: 300M
        ports:
          - containerPort: 80
        volumeMounts:
          - mountPath: "/data"
            name: vaultwarden-vol
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vault
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    name: http
  selector:
    app: vaultwarden
---
