vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vault
spec:
  defaultBackend:
    service:
      name: vaultwarden
      port:
        number: 80
  ingressClassName: tailscale
  tls:
    - hosts:
        - vault
